// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should report the existence of TSQuery matches 1`] = `
"// BETTERER RESULTS V2.
exports[\`tsquery no raw console.log\`] = {
  value: \`{
    \\"src/index.ts:4087252068\\": [
      [0, 0, 11, \\"TSQuery match\\", \\"3870399096\\"]
    ]
  }\`
};
"
`;

exports[`betterer should report the existence of TSQuery matches 2`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" got checked for the first time! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" got checked for the first time! 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" stayed the same. 😐
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" stayed the same. 😐
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" stayed the same. 😐
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" stayed the same. 😐

1 test got checked. 🤔
1 test stayed the same. 😐

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸ 1 existing issue in \\"<project>/fixtures/test-betterer-tsquery/src/index.ts\\".
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸ 1 new issue in \\"<project>/fixtures/test-betterer-tsquery/src/index.ts\\":
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸ TSQuery match
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸
🔥 tsquery no raw console.log: \\"tsquery no raw console.log\\" got worse. 😔
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸

Error: \\"tsquery no raw console.log\\" got worse. 😔
      at run (<project>/packages/reporter/dist/components/Runs.js:1299:17)
      at <project>/packages/logger/dist/components/tasks/task.js:1414:35
🔥 tsquery no raw console.log: \\"tsquery no raw console.log\\" got worse. 😔
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
💥 Betterer (0ms): 1 test done! 1 test errored!
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸

Error: \\"tsquery no raw console.log\\" got worse. 😔
      at run (<project>/packages/reporter/dist/components/Runs.js:1299:17)
      at <project>/packages/logger/dist/components/tasks/task.js:1414:35
🔥 tsquery no raw console.log: \\"tsquery no raw console.log\\" got worse. 😔
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 tsquery no raw console.log: \\"tsquery no raw console.log\\" got worse. 😔
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸

Error: \\"tsquery no raw console.log\\" got worse. 😔
      at run (<project>/packages/reporter/dist/components/Runs.js:1299:17)
      at <project>/packages/logger/dist/components/tasks/task.js:1414:35
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
💥 Betterer (0ms): 1 test done! 1 test errored!
🔥 tsquery no raw console.log: \\"tsquery no raw console.log\\" got worse. 😔
  ▸
  ▸   // <project>/fixtures/test-betterer-tsquery/src/index.ts
  ▸   1 | console.log('foo');
  ▸ > 2 | console.log('foo');
  ▸     | ^^^^^^^^^^^ TSQuery match
  ▸

Error: \\"tsquery no raw console.log\\" got worse. 😔
      at run (<project>/packages/reporter/dist/components/Runs.js:1299:17)
      at <project>/packages/logger/dist/components/tasks/task.js:1414:35

1 test got checked. 🤔
1 test got worse. 😔

Run \`betterer --update\` to force an update of the results file. 🆙

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" met its goal! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" met its goal! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" met its goal! 🎉
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" met its goal! 🎉

1 test got checked. 🤔
1 test got better! 😍
\\"tsquery no raw console.log\\" met its goal! 🎉)

",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
🤔 tsquery no raw console.log: running \\"tsquery no raw console.log\\"!
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🌟 Betterer (0ms): 1 test running...
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" has already met its goal! ✨
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" has already met its goal! ✨
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" has already met its goal! ✨
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
🎉 Betterer (0ms): 1 test done!
✅ tsquery no raw console.log: \\"tsquery no raw console.log\\" has already met its goal! ✨

1 test got checked. 🤔
1 test got checked for the first time! 🎉
\\"tsquery no raw console.log\\" met its goal! 🎉)

",
]
`;

exports[`betterer should throw if there is no configFilePath 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-tsquery-no-config-file-path/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-tsquery.spec.ts:65:34
      at Object.<anonymous> (<project>/test/betterer-tsquery.spec.ts:65:9)

Error: for \`@betterer/tsquery\` to work, you need to provide the path to a tsconfig.json file, e.g. \`'./tsconfig.json'\`. ❌
      at tsquery (<project>/packages/tsquery/dist/tsquery.js:473:11)
      at Object.<anonymous> (<project>/fixtures/test-betterer-tsquery-no-config-file-path/.betterer.js:4:31)
      at Runtime._execModule (<project>/node_modules/jest-runtime/build/index.js:1299:24)
      at Runtime._loadModule (<project>/node_modules/jest-runtime/build/index.js:898:12)
      at Runtime.requireModule (<project>/node_modules/jest-runtime/build/index.js:746:10)
      at Runtime.requireModuleOrMock (<project>/node_modules/jest-runtime/build/index.js:919:21)
      at Object.requireUncached (<project>/packages/betterer/dist/require.js:328:29)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2168:43)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-tsquery-no-config-file-path/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-tsquery.spec.ts:65:34
      at Object.<anonymous> (<project>/test/betterer-tsquery.spec.ts:65:9)

Error: for \`@betterer/tsquery\` to work, you need to provide the path to a tsconfig.json file, e.g. \`'./tsconfig.json'\`. ❌
      at tsquery (<project>/packages/tsquery/dist/tsquery.js:473:11)
      at Object.<anonymous> (<project>/fixtures/test-betterer-tsquery-no-config-file-path/.betterer.js:4:31)
      at Runtime._execModule (<project>/node_modules/jest-runtime/build/index.js:1299:24)
      at Runtime._loadModule (<project>/node_modules/jest-runtime/build/index.js:898:12)
      at Runtime.requireModule (<project>/node_modules/jest-runtime/build/index.js:746:10)
      at Runtime.requireModuleOrMock (<project>/node_modules/jest-runtime/build/index.js:919:21)
      at Object.requireUncached (<project>/packages/betterer/dist/require.js:328:29)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2168:43)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
",
]
`;

exports[`betterer should throw if there is no query 1`] = `
Array [
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-tsquery-no-query/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-tsquery.spec.ts:81:34
      at Object.<anonymous> (<project>/test/betterer-tsquery.spec.ts:81:9)

Error: for \`@betterer/tsquery\` to work, you need to provide a query, e.g. \`'CallExpression > PropertyAccessExpression'\`. ❌
      at tsquery (<project>/packages/tsquery/dist/tsquery.js:486:11)
      at Object.<anonymous> (<project>/fixtures/test-betterer-tsquery-no-query/.betterer.js:4:31)
      at Runtime._execModule (<project>/node_modules/jest-runtime/build/index.js:1299:24)
      at Runtime._loadModule (<project>/node_modules/jest-runtime/build/index.js:898:12)
      at Runtime.requireModule (<project>/node_modules/jest-runtime/build/index.js:746:10)
      at Runtime.requireModuleOrMock (<project>/node_modules/jest-runtime/build/index.js:919:21)
      at Object.requireUncached (<project>/packages/betterer/dist/require.js:328:29)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2168:43)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
",
  "
   / | /     _         _   _                     
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |   
   / | /    |_.__//___|/__|/__/___|_|  /___|_|   
 

Error: could not read config from \\"<project>/fixtures/test-betterer-tsquery-no-query/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2211:13)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:2107:29)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:1959:24)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:911:18)
      at <project>/packages/betterer/dist/betterer.js:909:47
      at runContext (<project>/packages/betterer/dist/betterer.js:1074:18)
      at <project>/test/betterer-tsquery.spec.ts:81:34
      at Object.<anonymous> (<project>/test/betterer-tsquery.spec.ts:81:9)

Error: for \`@betterer/tsquery\` to work, you need to provide a query, e.g. \`'CallExpression > PropertyAccessExpression'\`. ❌
      at tsquery (<project>/packages/tsquery/dist/tsquery.js:486:11)
      at Object.<anonymous> (<project>/fixtures/test-betterer-tsquery-no-query/.betterer.js:4:31)
      at Runtime._execModule (<project>/node_modules/jest-runtime/build/index.js:1299:24)
      at Runtime._loadModule (<project>/node_modules/jest-runtime/build/index.js:898:12)
      at Runtime.requireModule (<project>/node_modules/jest-runtime/build/index.js:746:10)
      at Runtime.requireModuleOrMock (<project>/node_modules/jest-runtime/build/index.js:919:21)
      at Object.requireUncached (<project>/packages/betterer/dist/require.js:328:29)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:2168:43)
      at <project>/packages/betterer/dist/context/context.js:2112:38
      at Array.map (<anonymous>)
",
]
`;
